initial pages, redux seems to be working :fingerscrossed:

--- a/package.json
+++ b/package.json
@@ -9,18 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.3",
+    "@mui/base": "^5.0.0-beta.40",
+    "@nextui-org/react": "^2.3.6",
+    "@reduxjs/toolkit": "^2.2.3",
+    "clsx": "^2.1.0",
+    "next": "^14.2.3",
+    "pg": "^8.11.5",
+    "react": "^18.3.1",
     "react-dom": "^18",
-    "next": "14.2.2"
+    "react-redux": "^9.1.1",
+    "sequelize": "^6.37.3",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
+    "@types/pg": "^8.11.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.2"
+    "typescript": "^5"
   }
 }
