--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@mui/base": "^5.0.0-beta.40",
@@ -17,11 +18,13 @@
     "clsx": "^2.1.0",
     "next": "^14.2.3",
     "pg": "^8.11.5",
+    "postcss-atrule-bem": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-redux": "^9.1.1",
     "sequelize": "^6.37.3",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -32,6 +35,7 @@
     "eslint-config-next": "14.2.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
+    "sass": "^1.77.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
