--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "^18",
     "react-redux": "^9.1.1",
     "sequelize": "^6.37.3",
+    "typescript-logging": "^2.2.0",
+    "typescript-logging-log4ts-style": "^2.2.0",
     "use-debounce": "^10.0.0",
     "zod": "^3.23.8"
   },
