--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/base": "^5.0.0-beta.40",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "@vercel/speed-insights": "^1.0.10",
     "clsx": "^2.1.0",
     "next": "^14.2.3",
     "pg": "^8.11.5",
