--- a/package.json
+++ b/package.json
@@ -10,18 +10,24 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@mui/base": "^5.0.0-beta.40",
+    "@mui/icons-material": "^5.15.18",
+    "@mui/material": "^5.15.18",
     "@nextui-org/react": "^2.3.6",
     "@reduxjs/toolkit": "^2.2.3",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss-atrule-bem": "^4.0.0",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18",
     "react-redux": "^9.1.1",
     "sequelize": "^6.37.3",
