--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/speed-insights": "^1.0.10",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
+    "jose": "^5.3.0",
     "next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss-atrule-bem": "^4.0.0",
@@ -34,6 +35,7 @@
     "typescript-logging": "^2.2.0",
     "typescript-logging-log4ts-style": "^2.2.0",
     "use-debounce": "^10.0.0",
+    "validator": "^13.12.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
