--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "postcss-atrule-bem": "^4.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
+    "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
     "react-redux": "^9.1.1",
     "sequelize": "^6.37.3",
