fixing edit and added some more validations

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
     "react-redux": "^9.1.1",
+    "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3",
     "typescript-logging": "^2.2.0",
     "typescript-logging-log4ts-style": "^2.2.0",
