--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "postcss": "^8",
     "sass": "^1.77.0",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
