--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "jose": "^5.3.0",
+    "mysql2": "^3.10.1",
     "next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss-atrule-bem": "^4.0.0",
