--- a/package.json
+++ b/package.json
@@ -33,8 +33,10 @@
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
     "react-redux": "^9.1.1",
+    "react-sortablejs": "^6.1.4",
     "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3",
+    "sortablejs": "^1.15.2",
     "typescript-logging": "^2.2.0",
     "typescript-logging-log4ts-style": "^2.2.0",
     "use-debounce": "^10.0.0",
@@ -46,6 +48,7 @@
     "@types/pg": "^8.11.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/sortablejs": "^1.15.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "eslint-plugin-react-hooks": "^4.6.2",
