--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "jose": "^5.3.0",
+    "lz-string": "^1.5.0",
     "mysql2": "^3.10.1",
     "next": "^14.2.3",
+    "openai": "^4.53.2",
     "pg": "^8.11.5",
     "postcss-atrule-bem": "^4.0.0",
     "react": "^18.3.1",
