--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "migrate": ""
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.45",
     "@auth0/nextjs-auth0": "^3.5.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
@@ -22,6 +23,7 @@
     "@reduxjs/toolkit": "^2.2.3",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
+    "ai": "^3.3.6",
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "jose": "^5.3.0",
