--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "migrate": ""
+    "migrate": "",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.45",
     "@auth0/nextjs-auth0": "^3.5.0",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-typescript": "^7.24.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
@@ -37,6 +41,7 @@
     "react-redux": "^9.1.1",
     "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3",
+    "ts-node": "^10.9.2",
     "typescript-logging": "^2.2.0",
     "typescript-logging-log4ts-style": "^2.2.0",
     "use-debounce": "^10.0.0",
@@ -44,6 +49,11 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.24.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/pg": "^8.11.5",
     "@types/react": "^18",
@@ -51,6 +61,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "sass": "^1.77.0",
     "tailwindcss": "^3.4.1",
