--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "migrate": "",
     "test": "jest",
     "test:watch": "jest --watch",
-    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\""
+    "pretty": "prettier --write \"./**/*.{js,jsx,mjs,cjs,ts,tsx,json}\"",
+    "count": "git ls-files | xargs wc -l"
   },
   "dependencies": {
     "@ai-sdk/openai": "^0.0.45",
@@ -42,6 +43,7 @@
     "react-redux": "^9.1.1",
     "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3",
+    "swr": "^2.2.5",
     "ts-node": "^10.9.2",
     "typescript-logging": "^2.2.0",
     "typescript-logging-log4ts-style": "^2.2.0",
