--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "react-bootstrap": "^2.10.2",
     "react-bootstrap-typeahead": "^6.3.2",
     "react-dom": "^18",
+    "react-notifications": "^1.7.4",
     "react-redux": "^9.1.1",
+    "react-toastify": "^10.0.5",
     "reactjs-popup": "^2.0.6",
     "sequelize": "^6.37.3",
     "swr": "^2.2.5",
