--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,9 @@
     "app/data/connection.ts",
     "__tests__/page.test.jsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "typeRoots": [
+  "../node_modules/@types",
+  "../@types"
+]
 }
