--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^5.3.3",
     "clsx": "^2.1.0",
     "jose": "^5.3.0",
+    "langchain": "^0.2.18",
     "next": "^14.2.3",
     "pg": "^8.11.5",
     "postcss-atrule-bem": "^4.0.0",
