--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,7 @@
     "app/api/auth/auth0/route.js",
     "app/data/connection.ts",
     "__tests__/page.test.jsx"
-  ],
+, "syncAllTables.js", "syncAllTables.js", "syncAllTables.js"  ],
   "exclude": ["node_modules"],
   "typeRoots": [
   "../node_modules/@types",
