moved loading wheel to another component, ran prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,11 +31,11 @@
     ".next/types/**/*.ts",
     "app/api/auth/auth0/route.js",
     "app/data/connection.ts",
-    "__tests__/page.test.jsx"
-, "syncAllTables.js", "syncAllTables.js", "syncAllTables.js"  ],
+    "__tests__/page.test.jsx",
+    "syncAllTables.js",
+    "syncAllTables.js",
+    "syncAllTables.js"
+  ],
   "exclude": ["node_modules"],
-  "typeRoots": [
-  "../node_modules/@types",
-  "../@types"
-]
+  "typeRoots": ["../node_modules/@types", "../@types"]
 }
