--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@auth0/nextjs-auth0": "^3.5.0",
     "@babel/preset-env": "^7.25.3",
     "@babel/preset-typescript": "^7.24.7",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^1.7.19",
@@ -57,15 +59,17 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.24.7",
+    "@eslint/js": "^9.11.1",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/pg": "^8.11.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.2.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.7.0",
@@ -74,6 +78,7 @@
     "prettier": "^3.3.3",
     "sass": "^1.77.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.2",
+    "typescript-eslint": "^8.8.0"
   }
 }
